Изменение во экранах

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Demo 0.0.1.loader.js";
+      var loaderUrl = buildUrl + "/Demo0.0.1F.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Demo 0.0.1.data.unityweb",
-        frameworkUrl: buildUrl + "/Demo 0.0.1.framework.js.unityweb",
-        codeUrl: buildUrl + "/Demo 0.0.1.wasm.unityweb",
+        dataUrl: buildUrl + "/Demo0.0.1F.data.unityweb",
+        frameworkUrl: buildUrl + "/Demo0.0.1F.framework.js.unityweb",
+        codeUrl: buildUrl + "/Demo0.0.1F.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Blue VS Red",
